--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -206,23 +206,27 @@ form {
   text-align: left;
   font-size: 12px;
   line-height: 18px;
+  // text-transform: uppercase;
   @include media($tablet) {
     padding: 40px 0px;
-    font-size: 16px;
-    line-height: 22px;
+    font-size: 14px;
+    line-height: 18px;
   }
   span {
-    text-transform: uppercase;
+    font-family: $secondaryFont;
+    // text-transform: uppercase;
     font-size: 12px;
-    font-weight: bold;
+    // font-weight: bold;
     text-align: left;
     display: block;
     @include media($tablet) {
       font-size: 16px;
-      font-weight: bold;
+      // font-weight: bold;
     }
   }
   a {
+    // font-family: $secondaryFont;
+    
     color: $secondaryColor;
     text-decoration: none;
 
