--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -77,6 +77,7 @@ header {
 .site-logo {
   position: relative;
   top: 5px;
+
   @include media(350px) {
       // top: 8px;
     }
@@ -86,8 +87,12 @@ header {
     img {
       width: 110px;
       height: auto;
+      transition: all .15s ease-in;
       @include media($tablet) {
         width: 200px;
+        &:hover {
+          width: 210px; 
+        }
       }
       @include media($desktop) {
       }
@@ -287,6 +292,10 @@ header {
 
 
 
+
+
+
+
 .social-feed {
   // position: absolute;
   position: fixed;
@@ -297,17 +306,19 @@ header {
   transition: opacity .2s ease;
   opacity: 0;
   display: none;
+ // border: 1px solid red;
+  // overflow: scroll;
+
   &.active {
     display: block;
     right: 0px;
     left: 0px;
     bottom: 0px;
-    top: 40px;
+    top: 0px;
     opacity: 1;
     @include media($tablet) {
-      top: 80px;
+      top: 0px;
     }
-    overflow: scroll;
   }
   .close-feed {
     z-index: 9999;
@@ -321,8 +332,9 @@ header {
     overflow: scroll;
     max-width: 600px;
     margin: 0 auto;
-    margin-top: 60px;
+    margin-top: 0px;
     height: 100%;
+    // border: 1px solid red;
     iframe {
       width: 100%;
       height: 100% !important;
