--- a/style.css
+++ b/style.css
@@ -1594,11 +1594,16 @@ header {
 .site-logo img {
   width: 110px;
   height: auto;
+  -webkit-transition: all .15s ease-in;
+  transition: all .15s ease-in;
 }
 
 @media only screen and (min-width: 768px) {
   .site-logo img {
     width: 200px;
+  }
+  .site-logo img:hover {
+    width: 210px;
   }
 }
 
@@ -1868,14 +1873,13 @@ header .get-social a i {
   right: 0px;
   left: 0px;
   bottom: 0px;
-  top: 40px;
+  top: 0px;
   opacity: 1;
-  overflow: scroll;
 }
 
 @media only screen and (min-width: 768px) {
   .social-feed.active {
-    top: 80px;
+    top: 0px;
   }
 }
 
@@ -1895,7 +1899,7 @@ header .get-social a i {
   overflow: scroll;
   max-width: 600px;
   margin: 0 auto;
-  margin-top: 60px;
+  margin-top: 0px;
   height: 100%;
 }
 
@@ -2809,19 +2813,19 @@ aside .mobile-add {
 
 #overlay-contact-form .close-form {
   position: absolute;
-  right: 20px;
+  right: 10px;
   top: 10px;
 }
 
 @media only screen and (min-width: 768px) {
   #overlay-contact-form .close-form {
     top: 20px;
-    right: 40px;
+    right: 20px;
   }
 }
 
 #overlay-contact-form .close-form i {
-  font-size: 32px;
+  font-size: 35px;
   color: rgba(2, 3, 74, 0.3);
 }
 
