--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -49,7 +49,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
+    align-items: center;
     .meta-date {
       font-weight: 300;
       position: absolute;
@@ -58,43 +58,51 @@
       color: $primaryAlt;
       text-transform: uppercase;
     }
-
     .thumb {
       overflow: hidden;
-      width: 100%;
+      width: calc(100% + 40px);
+      left: -20px;
+      top: -20px; 
       position: relative;
+      max-height: 20vw;
+      // overflow: hidden;
+      border-radius: 15px;
       img {
         width: 100%;
         height: auto;
       }
       margin-bottom: 20px;
       @include media($tablet) {
-        margin-bottom: 40px;
+        // margin-bottom: 40px;
       }
     }
-
     .excerpt {
       // background: #000 !important;
       padding-bottom: 30px;
-      border: 1px solid #eee;
+      // border: 1px solid #eee;
+      background: #eee;
       margin-bottom: 40px;
       padding: 10px;
+      border-radius: 15px;
+      transition: all 0.2s ease-in-out;
+      box-shadow: 0px 3px 3px rgba(#000, .0) ;
       &:hover {
         // border: 1px solid $secondaryAlt;
-        top: 2px;
-        transition: all 0.2s ease-in-out;
-        box-shadow: 0px 3px 3px rgba(#000, .3) ;
+        // top: 2px;
+        box-shadow: 0px 3px 7px rgba(#000, .3) ;
       }
       @include media($tablet) {
         margin-bottom: 80px;
         padding: 20px;
+        padding-bottom: 60px;
         width: 48%;
       }
       h3 {color:#000;}
       .para {
         margin-top: 20px;
+        // margin-bottom: 20px;
         @include media($tablet) {
-          margin-top: 40px;
+          // margin-top: 40px;
         }
       }
       .para a {
@@ -123,8 +131,8 @@
     text-align: right;
   }
   .meta-data {
-    margin-top: 10px;
-    margin-bottom: 20px;
+    // margin-top: 10px;
+    margin-bottom: 10px;
     color: $lightGrey;
     font-size: 11px;
     line-height: 18px;
