--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -242,30 +242,12 @@ h3.color-6 a,
 }
 
 
-.bg-color-1  {
-  background-color: rgba($primaryColor, .15)!important;
-}
-
-.bg-color-2  {
-  background-color: rgba($primaryAlt, .15)!important;
-}
-
-.bg-color-3  {
-  background-color: rgba($primaryHighlight, .15)!important;
-}
-
-.bg-color-4  {
-  background-color: rgba($secondaryColor, .15)!important;
-}
-
-.bg-color-5  {
-  background-color: rgba($secondaryAlt, .15)!important;
-}
-
-.bg-color-6  {
-  background-color: rgba($moarOrange, .15)!important;
-}
-
+.bg-color-1  {background-color: rgba($primaryColor, .05)!important; }
+.bg-color-2  {background-color: rgba($primaryAlt, .05)!important; }
+.bg-color-3  {background-color: rgba($primaryHighlight, .05)!important; }
+.bg-color-4  {background-color: rgba($secondaryColor, .05)!important; }
+.bg-color-5  {background-color: rgba($secondaryAlt, .05)!important; }
+.bg-color-6  {background-color: rgba($moarOrange, .05)!important; }
 
 
 /* Landing Page Resets */
