--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -33,13 +33,10 @@
     }
   }
   h2 {
-    // font-weight: 900;
-    // text-transform: uppercase;
     margin-top: 0;
     margin-bottom: 0;
     a {
       text-decoration: none;
-      // color: #37bfe7;
       &:hover {
         // color: #37bfe7;
       }
@@ -49,7 +46,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
     .meta-date {
       font-weight: 300;
       position: absolute;
