--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -1,6 +1,7 @@
 .featured-image {
   display: block;
   img {
+    border-radius: 15px;
     width: 100%;
     max-width: 600px;
     max-height: 600px;
@@ -26,9 +27,7 @@
       }
     }
     .blog-intro {
-      // margin-bottom: 40px;
       @include media($tablet) {
-        // margin-bottom: 80px;
       }
     }
   }
@@ -70,13 +69,10 @@
       }
       margin-bottom: 20px;
       @include media($tablet) {
-        // margin-bottom: 40px;
       }
     }
     .excerpt {
-      // background: #000 !important;
       padding-bottom: 30px;
-      // border: 1px solid #eee;
       background: #eee;
       margin-bottom: 40px;
       padding: 10px;
@@ -84,8 +80,6 @@
       transition: all 0.2s ease-in-out;
       box-shadow: 0px 3px 3px rgba(#000, .0) ;
       &:hover {
-        // border: 1px solid $secondaryAlt;
-        // top: 2px;
         box-shadow: 0px 3px 7px rgba(#000, .3) ;
       }
       @include media($tablet) {
@@ -97,9 +91,7 @@
       h3 {color:#000;}
       .para {
         margin-top: 20px;
-        // margin-bottom: 20px;
         @include media($tablet) {
-          // margin-top: 40px;
         }
       }
       .para a {
@@ -108,7 +100,6 @@
         color: #000;
         font-size: 14px;
         line-height: 18px;
-        // font-weight: 600;
         color: $darkColor;
 
         span {
@@ -128,7 +119,6 @@
     text-align: right;
   }
   .meta-data {
-    // margin-top: 10px;
     margin-bottom: 10px;
     color: $lightGrey;
     font-size: 11px;
@@ -157,11 +147,9 @@
   .next-prev {
     margin-top: 50px;
     display: flex;
-    // display: none;
     justify-content: space-between;
     flex-wrap: wrap;
     a {
-      // color: $lightColor;
       transition: all 0.2s ease-in-out;
       margin-bottom: 20px;
       i {
@@ -171,24 +159,12 @@
         font: normal normal normal 27px/17px "Font Awesome 5 Pro";
       }
       &:hover {
-        // color: $lightColor;
         i {
-          // color: $lightColor;
         }
       }
     }
   }
   .prev-blog-button {
-    // &:before {
-    //   transition: all 0.1s ease-in;
-    //   content: "\f137";
-    //   display: inline-block;
-    //   font: normal normal normal 27px/17px "Font Awesome 5 Pro";
-    //   position: relative;
-    //   margin-right: 10px;
-    //   top: 3px;
-    //   font-weight: 100;
-    // }
     &:hover {
       color: $secondaryAlt;
       &:before {
@@ -198,16 +174,6 @@
   }
 
   .next-blog-button {
-    // &:after {
-    //   transition: all 0.1s ease-in;
-    //   content: "\f138";
-    //   display: inline-block;
-    //   font: normal normal normal 27px/17px "Font Awesome 5 Pro";
-    //   position: relative;
-    //   margin-left: 10px;
-    //   top: 3px;
-    //   font-weight: 100;
-    // }
     &:hover {
       color: $secondaryAlt;
       &:after {
