--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -60,12 +60,16 @@
       left: -20px;
       top: -20px; 
       position: relative;
-      max-height: 20vw;
-      // overflow: hidden;
+      max-height: 50vw;
+      overflow: hidden;
       border-radius: 15px;
+      @include media($tablet) {
+        max-height: 20vw;
+      }
       img {
         width: 100%;
         height: auto;
+        // min-height: 200px;
       }
       margin-bottom: 20px;
       @include media($tablet) {
