--- a/sass/_blog.scss
+++ b/sass/_blog.scss
@@ -56,17 +56,17 @@
     }
    
     .excerpt {
-      padding-bottom: 30px;
       background: #eee;
       margin-bottom: 100px;
       padding: 10px;
       border-radius: 15px;
       transition: all 0.2s ease-in-out;
       box-shadow: 0px 3px 3px rgba(#000, .0) ;
+      padding-bottom: 40px;
       @include media($tablet) {
         margin-bottom: 80px;
         padding: 20px;
-        padding-bottom: 60px;
+        // padding-bottom: 30px;
         width: 48%;
       }
       &:hover {
